--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 					<p>
 						Exploring innovative ways to map and analyze spatial data using LiDAR technology for enhanced environmental monitoring.
 					</p>
-					<a href="https://example.com" class="project-link">Learn More</a>
+					<a href="https://www.asg.ed.tum.de/gds/forschung-research/projects/provilas/" class="project-link">Learn More</a>
 				</div>
 				<div class="project-card">
 					<h3>Project 2: Point Cloud Data Processing</h3>
