--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 					<h3>PROVILAS</h3>
 					<img src="PROVILAS.png" alt="PROVILAS" class="project-image">
 					<p>
-						Exploring innovative ways to map and analyze spatial data using LiDAR technology for enhanced environmental monitoring.
+						Exploring innovative ways to analyze a time series of spatial data using LiDAR technology for enhanced spatio-temporal structural health monitoring.
 					</p>
 					<a href="https://www.asg.ed.tum.de/gds/forschung-research/projects/provilas/" class="project-link">Learn More</a>
 				</div>
@@ -404,14 +404,14 @@
 			{
                 year: "2025",
                 title: "Spatio-temporal mode description in LiDAR point clouds",
-                description: "Published at JISDM 2025",
+                description: "Published at JISDM 2025.",
 				link: "https://example.com",
                 image: null
             },
             {
                 year: "2025",
                 title: "MEMS LiDAR sensors for low-cost 3D frequency mode detection",
-                description: "Details about your third publication.",
+                description: "Under review.",
 				link: "https://example.com",
                 image: null
             },
