--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         .timeline-item img {
 			float: right;                   /* Float the image to the right of the text */
 			margin-left: 50px;              /* Add spacing between the image and the text */
-			margin-top: 0;                  /* Ensure the image starts at the top */
+			margin-top: 10px;                  /* Ensure the image starts at the top */
 			margin-bottom: 10px;            /* Add spacing below the image */
 			width: auto;                    /* Maintain aspect ratio */
 			max-width: 400px;               /* Limit image width */
