--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			float: right;                   /* Float image to the right of the text */
 			margin-left: 20px;              /* Space between image and text */
 			margin-bottom: 10px;            /* Space below the image */
-			max-width: 300px;               /* Limit image width */
+			max-width: 400px;               /* Limit image width */
 			max-height: 100px;              /* Limit image height */
 			object-fit: cover;              /* Ensure proper scaling */
 			border-radius: 5px;             /* Optional: Rounded corners */
@@ -262,6 +262,7 @@
         .timeline-item img {
 			float: right;                   /* Float the image to the right of the text */
 			margin-left: 50px;              /* Add spacing between the image and the text */
+			margin-right: 10px;
 			margin-top: 10px;                  /* Ensure the image starts at the top */
 			margin-bottom: 10px;            /* Add spacing below the image */
 			width: auto;                    /* Maintain aspect ratio */
