--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			margin-left: 20px;              /* Space between image and text */
 			margin-bottom: 10px;            /* Space below the image */
 			max-width: 400px;               /* Limit image width */
-			max-height: 100px;              /* Limit image height */
+			max-height: 200px;              /* Limit image height */
 			object-fit: cover;              /* Ensure proper scaling */
 			border-radius: 5px;             /* Optional: Rounded corners */
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
@@ -262,7 +262,7 @@
         .timeline-item img {
 			float: right;                   /* Float the image to the right of the text */
 			margin-left: 50px;              /* Add spacing between the image and the text */
-			margin-right: 10px;
+			margin-right: 50px;
 			margin-top: 10px;                  /* Ensure the image starts at the top */
 			margin-bottom: 10px;            /* Add spacing below the image */
 			width: auto;                    /* Maintain aspect ratio */
@@ -371,7 +371,7 @@
 					<h3>PROVILAS</h3>
 					<img src="PROVILAS.png" alt="PROVILAS" class="project-image">
 					<p>
-						Exploring innovative ways to analyze a time series of spatial data using LiDAR technology for enhanced spatio-temporal structural health monitoring.
+						Exploring innovative ways to analyze a time series of spatial data using LiDAR technology for enhanced spatio-temporal monitoring in structural health.
 					</p>
 					<a href="https://www.asg.ed.tum.de/gds/forschung-research/projects/provilas/" class="project-link">Learn More</a>
 				</div>
