--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		}
 
 		#projects h2 {
-			font-size: 1.7rem;             /* Match the title size with other sections */
+			font-size: 1.6rem;             /* Match the title size with other sections */
 			color: #004466;                 /* Match theme color */
 			margin-bottom: 20px;            /* Space below the title */
 		}
@@ -262,9 +262,9 @@
         .timeline-item img {
 			float: right;                   /* Float the image to the right of the text */
 			margin-left: 50px;              /* Add spacing between the image and the text */
-			margin-right: 25px;
+			margin-right: 30px;
 			margin-top: 10px;               /* Ensure the image starts at the top */
-			margin-bottom: 10px;            /* Add spacing below the image */
+			margin-bottom: 5px;             /* Add spacing below the image */
 			width: auto;                    /* Maintain aspect ratio */
 			max-width: 400px;               /* Limit image width */
 			max-height: 200px;              /* Limit image height */
@@ -371,7 +371,7 @@
 					<h3>PROVILAS</h3>
 					<img src="PROVILAS.png" alt="PROVILAS" class="project-image">
 					<p>
-						Exploring innovative ways to analyze a time series of spatial data using LiDAR technology for enhanced spatio-temporal monitoring in structural health.
+						Exploring innovative ways to analyze a time series of spatial data using LiDAR technology for enhanced spatio-temporal understanding in structural health monitoring.
 					</p>
 					<a href="https://www.asg.ed.tum.de/gds/forschung-research/projects/provilas/" class="project-link">Learn More</a>
 				</div>
