--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
         .timeline-item img {
 			float: right;                   /* Float the image to the right of the text */
 			margin-left: 50px;              /* Add spacing between the image and the text */
-			margin-right: 40px;
+			margin-right: 45px;
 			margin-top: 10px;               /* Ensure the image starts at the top */
-			margin-bottom: 7px;             /* Add spacing below the image */
+			margin-bottom: 6px;             /* Add spacing below the image */
 			width: auto;                    /* Maintain aspect ratio */
 			max-width: 400px;               /* Limit image width */
 			max-height: 200px;              /* Limit image height */
@@ -427,7 +427,7 @@
 				year: "2023",
                 title: "Efficient In-Memory Point Cloud Query Processing",
                 description: "Point cloud data acquired via laser scanning or stereo matching of photogrammetry imagery has become an emerging and vital data source in an increasing research and application field. However, point cloud processing can be highly challenging due to an ever-increasing amount of points and the demand for handling the data in near real-time. In this paper, we propose an efficient in-memory point cloud processing solution and implementation demonstrating that the inherent technical identity of the memory location of a point (e.g., a memory pointer) is both sufficient and elegant to avoid gridding as long as the point cloud fits into the main memory of the computing system. We evaluate the per- formance and scalability of the system on three benchmark point cloud datasets (e.g., ETH 3D Point Cloud Dataset, Oakland 3D Point Cloud Dataset, and Kijkduin 4D Point Cloud Dataset) w.r.t different point cloud query patterns like k nearest neighbors, eigenvalue-based geometric feature extraction, and spatio-temporal filtering. Preliminary experiments show very promising results in facilitating faster and more efficient point cloud processing in many potential aspects. We hope the insights shared in the paper will substantially impact broader point cloud processing research as the approach helps to avoid memory amplifications." ,
-				link: "https://www.bgd.ed.tum.de/pdf/2023_pointcloudqueries_Teuscher.pdf",
+				link: "https://link.springer.com/chapter/10.1007/978-3-031-43699-4_16",
                 image: null
             }
         ];
