--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 			max-width: 900px;               /* Limit section width to match other sections */
 			margin: 20px auto;              /* Center the section on the page */
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+			overflow: hidden;
 		}
 
 		#projects h2 {
@@ -119,6 +120,24 @@
 			display: flex;                 /* Switch to flex layout */
 			flex-direction: column; 	   /* Stack projects vertically */
 			gap: 20px;
+			max-height: 600px;              /* Limit height to 600px */
+			overflow-y: auto;               /* Enable vertical scrolling */
+			padding-right: 10px;            /* Add space for scrollbar */
+			margin-right: -10px;            /* Align content flush with the section */
+			box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */
+		}
+
+		.projects-container::-webkit-scrollbar {
+			width: 8px;                     /* Customize scrollbar width */
+		}
+
+		.projects-container::-webkit-scrollbar-thumb {
+			background-color: #ccc;         /* Customize scrollbar color */
+			border-radius: 4px;             /* Rounded scrollbar edges */
+		}
+
+		.projects-container::-webkit-scrollbar-thumb:hover {
+			background-color: #999;         /* Darken scrollbar color on hover */
 		}
 
 		.project-card {
