--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 		}
 
 		.projects-container {
-			display: flex;                 /* Switch to flex layout */
-			flex-direction: column; 	   /* Stack projects vertically */
+			display: block;                 /* Switch to flex layout */
 			gap: 20px;
 			max-height: 400px;              /* Limit height to 600px */
 			overflow-y: auto;               /* Enable vertical scrolling */
