--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
         }
 
         section h2 {
-            margin-bottom: 20px;
-            color: #004466;
-        }
+			margin-top: 10px;               /* Reduce space above the section titles */
+			margin-bottom: 20px;            /* Keep consistent spacing below the titles */
+			font-size: 1.75rem;             /* Ensure consistent title size */
+			color: #004466;                 /* Match theme color */
+		}
+
 
         footer {
             text-align: center;
@@ -111,7 +114,7 @@
 		}
 
 		#projects h2 {
-			font-size: 1.5rem;             /* Match the title size with other sections */
+			<!-- font-size: 1.5rem;             /* Match the title size with other sections */ -->
 			color: #004466;                 /* Match theme color */
 			margin-bottom: 20px;            /* Space below the title */
 		}
