--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
         }
 
         section h2 {
-			margin-top: 10px;               /* Reduce space above the section titles */
-			margin-bottom: 20px;            /* Keep consistent spacing below the titles */
-			font-size: 1.75rem;             /* Ensure consistent title size */
-			color: #004466;                 /* Match theme color */
-		}
-
+            margin-bottom: 20px;
+            color: #004466;
+        }
 
         footer {
             text-align: center;
@@ -114,9 +111,10 @@
 		}
 
 		#projects h2 {
-			<!-- font-size: 1.5rem;             /* Match the title size with other sections */ -->
+			font-size: 1.5rem;             /* Match the title size with other sections */
 			color: #004466;                 /* Match theme color */
 			margin-bottom: 20px;            /* Space below the title */
+			margin-top: 0px;
 		}
 
 		.projects-container {
