--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 			float: right;                   /* Float image to the right of the text */
 			margin-left: 20px;              /* Space between image and text */
 			margin-bottom: 10px;            /* Space below the image */
+			margin-top: 10px;
 			max-width: 250px;               /* Limit image width */
 			max-height: 150px;              /* Limit image height */
 			object-fit: cover;              /* Ensure proper scaling */
