--- a/index.html
+++ b/index.html
@@ -110,12 +110,25 @@
 
 		#projects {
 			padding: 20px 20px;             /* Equal spacing around the section */
-			background-color: white;        /* Match the same background color */
+			background-color: #f9f9f9;        /* Match the same background color */
 			text-align: left;               /* Align title and content to the left */
 			max-width: 900px;               /* Limit section width to match other sections */
 			margin: 20px auto;              /* Center the section on the page */
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 			overflow: hidden;
+		}
+		
+		#projects .title-strip {
+			background-color: white;        /* White strip for the title */
+			padding: 10px 20px;             /* Add padding inside the strip */
+			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for the title strip */
+			margin-bottom: 20px;            /* Space below the title strip */
+		}
+		
+		#projects .title-strip h2 {
+			margin: 0;                      /* Remove default margins */
+			font-size: 1.75rem;             /* Match title size with other sections */
+			color: #004466;                 /* Match theme color */
 		}
 
 		.projects-container {
@@ -386,7 +399,9 @@
         </section>
 		
 		<section id="projects">
-			<h2>Projects</h2>
+			<div class="title-strip">
+				<h2>Projects</h2>
+			</div>
 			<div class="projects-container">
 				<div class="project-card">
 					<h3>PROVILAS</h3>
