--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
 			text-align: left;               /* Align title and content to the left */
 			max-width: 900px;               /* Limit section width to match other sections */
 			margin: 20px auto;              /* Center the section on the page */
-			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+			<!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */ -->
 			overflow: hidden;
 		}
 		
 		#projects .title-strip {
 			background-color: white;        /* White strip for the title */
 			padding: 10px 20px;             /* Add padding inside the strip */
-			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for the title strip */
+			<!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for the title strip */ -->
 			margin-bottom: 20px;            /* Space below the title strip */
 		}
 		
@@ -138,7 +138,7 @@
 			overflow-y: auto;               /* Enable vertical scrolling */
 			padding-right: 10px;            /* Add space for scrollbar */
 			margin-right: -10px;            /* Align content flush with the section */
-			box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */
+			<!-- box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */ -->
 		}
 
 		.projects-container::-webkit-scrollbar {
