--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 			width: calc(100% - 40px);       /* Ensure cards stretch to full width of the container */
 			margin: 0 auto; 				/* Center the cards */
 			overflow: hidden;
-			margin-bottom: 20px;            /* Space between cards */
+			margin-bottom: 10px;            /* Space between cards */
+			margin-top: 10px;
 		}
 		
 		.project-image {
