--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@
 			max-width: 900px;               /* Limit section width to match other sections */
 			margin: 20px auto;              /* Center the section on the page */
 			<!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */ -->
+			box-shadow: none !important;
+			border: none;
 			overflow: hidden;
 		}
 		
 		#projects .title-strip {
 			background-color: white;        /* White strip for the title */
 			padding: 10px 20px;             /* Add padding inside the strip */
-			<!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for the title strip */ -->
+			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for the title strip */
 			margin-bottom: 20px;            /* Space below the title strip */
 		}
 		
@@ -139,6 +141,8 @@
 			padding-right: 10px;            /* Add space for scrollbar */
 			margin-right: -10px;            /* Align content flush with the section */
 			<!-- box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */ -->
+			box-shadow: none !important;
+			border: none;
 		}
 
 		.projects-container::-webkit-scrollbar {
@@ -163,7 +167,7 @@
 			width: calc(100% - 40px);       /* Ensure cards stretch to full width of the container */
 			margin: 0 auto; 				/* Center the cards */
 			overflow: hidden;
-			margin-bottom: 10px;            /* Space between cards */
+			margin-bottom: 20px;            /* Space between cards */
 			margin-top: 10px;
 		}
 		
