--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 40px;
             padding: 20px;
             background: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            <!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); -->
         }
 
         section h2 {
