--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 			display: flex;                  /* Use Flexbox for layout */
 			gap: 20px;                      /* Space between image and text */
 			align-items: flex-start;        /* Align items to the top of the container */
+			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 		}
 
 		.about-text {
