--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 40px;
             padding: 20px;
             background: white;
-            <!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); -->
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         section h2 {
@@ -70,7 +70,6 @@
 			display: flex;                  /* Use Flexbox for layout */
 			gap: 20px;                      /* Space between image and text */
 			align-items: flex-start;        /* Align items to the top of the container */
-			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 		}
 
 		.about-text {
@@ -116,7 +115,7 @@
 			max-width: 900px;               /* Limit section width to match other sections */
 			margin: 20px auto;              /* Center the section on the page */
 			<!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */ -->
-			box-shadow: none !important;
+			box-shadow: none;
 			border: none;
 			overflow: hidden;
 		}
@@ -124,6 +123,7 @@
 		#projects .title-strip {
 			background-color: white;        /* White strip for the title */
 			padding: 10px 20px;             /* Add padding inside the strip */
+			width: 100%;
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for the title strip */
 			margin-bottom: 20px;            /* Space below the title strip */
 		}
