--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		}
 
 		#projects {
-			padding: 20px 20px;             /* Equal spacing around the section */
+			<!-- padding: 20px 20px;             /* Equal spacing around the section */ -->
 			background-color: #f9f9f9;        /* Match the same background color */
 			text-align: left;               /* Align title and content to the left */
 			max-width: 900px;               /* Limit section width to match other sections */
@@ -117,7 +117,7 @@
 			<!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */ -->
 			box-shadow: none;
 			border: none;
-			overflow: hidden;
+			<!-- overflow: hidden; -->
 		}
 		
 		#projects .title-strip {
