--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		}
 
 		#projects {
-			<!-- padding: 20px 20px;             /* Equal spacing around the section */ -->
+			padding: 20px 20px;             /* Equal spacing around the section */
 			background-color: #f9f9f9;        /* Match the same background color */
 			text-align: left;               /* Align title and content to the left */
 			max-width: 900px;               /* Limit section width to match other sections */
