--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			<!-- box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */ -->
 			box-shadow: none;
 			border: none;
-			<!-- overflow: hidden; -->
+			overflow: hidden;
 		}
 		
 		#projects .title-strip {
@@ -125,6 +125,7 @@
 			padding: 10px 20px;             /* Add padding inside the strip */
 			width: 100%;
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for the title strip */
+			margin-left: 0px;
 			margin-bottom: 20px;            /* Space below the title strip */
 		}
 		
