--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 		#projects {
 			padding: 20px 20px;             /* Equal spacing around the section */
-			background-color: #f9f9f9;        /* Match the same background color */
+			background-color: white;        /* Match the same background color */
 			text-align: left;               /* Align title and content to the left */
 			max-width: 900px;               /* Limit section width to match other sections */
 			margin: 20px auto;              /* Center the section on the page */
@@ -118,21 +118,6 @@
 			box-shadow: none;
 			border: none;
 			overflow: hidden;
-		}
-		
-		#projects .title-strip {
-			background-color: white;        /* White strip for the title */
-			padding: 10px 20px;             /* Add padding inside the strip */
-			width: 100%;
-			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for the title strip */
-			margin-left: 0px;
-			margin-bottom: 20px;            /* Space below the title strip */
-		}
-		
-		#projects .title-strip h2 {
-			margin: 0;                      /* Remove default margins */
-			font-size: 1.75rem;             /* Match title size with other sections */
-			color: #004466;                 /* Match theme color */
 		}
 
 		.projects-container {
