--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 		.projects-container {
 			display: block;                 /* Switch to flex layout */
 			gap: 20px;
+			background-color: #f9f9f9;
 			max-height: 500px;              /* Limit height to 600px */
 			overflow-y: auto;               /* Enable vertical scrolling */
 			padding-right: 10px;            /* Add space for scrollbar */
