--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 			overflow: hidden;
 			margin-bottom: 20px;            /* Space between cards */
 			margin-top: 10px;
+			margin-left: 10px;
 		}
 		
 		.project-image {
