--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 			margin-bottom: 20px;            /* Space between cards */
 			margin-top: 10px;
 			margin-left: 10px;
+			margin-right: 10x;
 		}
 		
 		.project-image {
