--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		}
 
 		#projects {
-			padding: 20px 20px;             /* Equal spacing around the section */
+			padding: 20px;             /* Equal spacing around the section */
 			background-color: white;        /* Match the same background color */
 			text-align: left;               /* Align title and content to the left */
 			max-width: 900px;               /* Limit section width to match other sections */
@@ -129,7 +129,7 @@
 			padding-right: 10px;            /* Add space for scrollbar */
 			margin-right: -10px;            /* Align content flush with the section */
 			<!-- box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */ -->
-			box-shadow: none !important;
+			box-shadow: none;
 			border: none;
 		}
 
@@ -156,9 +156,6 @@
 			margin: 0 auto; 				/* Center the cards */
 			overflow: hidden;
 			margin-bottom: 20px;            /* Space between cards */
-			margin-top: 10px;
-			margin-left: 10px;
-			margin-right: 10px;
 		}
 		
 		.project-image {
