--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
 		}
 
 		.projects-container {
-			display: block;                 /* Switch to flex layout */
+			display: flex;                 /* Switch to flex layout */
+			flex-direction: column;
 			gap: 20px;
 			background-color: #f9f9f9;
 			max-height: 500px;              /* Limit height to 600px */
