--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
 		}
 
 		.projects-container {
-			display: flex;                 /* Switch to flex layout */
-			flex-direction: column;
+			display: block-inline;                 /* Switch to flex layout */
 			gap: 20px;
 			background-color: #f9f9f9;
 			max-height: 500px;              /* Limit height to 600px */
