--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
 		.projects-container {
 			display: block-inline;                 /* Switch to flex layout */
+			padding: 0 20px;
 			gap: 20px;
 			background-color: #f9f9f9;
 			max-height: 500px;              /* Limit height to 600px */
