--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 			border-radius: 10px;            /* Rounded corners for consistency */
 			font-size: 1rem;                /* Match font size to other sections */
-			<!-- width: calc(100% - 40px);       /* Ensure cards stretch to full width of the container */ -->
-			width: 100%;
+			width: calc(100% - 40px);       /* Ensure cards stretch to full width of the container */
 			margin: 0 auto; 				/* Center the cards */
 			overflow: hidden;
 			margin-bottom: 10px;            /* Space between cards */
