--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 			<!-- box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */ -->
 			box-shadow: none;
 			border: none;
+			box-sizing: border-box;
 		}
 
 		.projects-container::-webkit-scrollbar {
@@ -155,7 +156,8 @@
 			width: calc(100% - 40px);       /* Ensure cards stretch to full width of the container */
 			margin: 0 auto; 				/* Center the cards */
 			overflow: hidden;
-			margin-bottom: 10px;            /* Space between cards */
+			margin-bottom: 20px;            /* Space between cards */
+			margin-top: 10px;
 		}
 		
 		.project-image {
