--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 			background-color: #f9f9f9;
 			max-height: 500px;              /* Limit height to 600px */
 			overflow-y: auto;               /* Enable vertical scrolling */
-			padding-right: 10px;            /* Add space for scrollbar */
-			margin-right: -10px;            /* Align content flush with the section */
+			padding: 0px;            /* Add space for scrollbar */
+			margin: 0 20px;            /* Align content flush with the section */
 			<!-- box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */ -->
 			box-shadow: none;
 			border: none;
