--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 			background-color: #f9f9f9;
 			max-height: 500px;              /* Limit height to 600px */
 			overflow-y: auto;               /* Enable vertical scrolling */
-			padding: 20px;             /* Add space for scrollbar */
-			margin: 0 0px;            /* Align content flush with the section */
+			padding: 0 10px;             /* Add space for scrollbar */
+			margin: 0;            /* Align content flush with the section */
 			<!-- box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */ -->
 			box-shadow: none;
 			border: none;
@@ -153,11 +153,10 @@
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 			border-radius: 10px;            /* Rounded corners for consistency */
 			font-size: 1rem;                /* Match font size to other sections */
-			width: calc(100% - 40px);       /* Ensure cards stretch to full width of the container */
+			width: calc(100% - 20px);       /* Ensure cards stretch to full width of the container */
 			margin: 0 auto; 				/* Center the cards */
 			overflow: hidden;
 			margin-bottom: 20px;            /* Space between cards */
-			margin-top: 10px;
 		}
 		
 		.project-image {
