--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 			margin: 0 auto; 				/* Center the cards */
 			overflow: hidden;
 			margin-bottom: 20px;            /* Space between cards */
+			margin-top: 10px;
 		}
 		
 		.project-image {
