--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
 			<!-- box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */ -->
 			padding-right: 10px;
 			margin-right: -10px;
+			padding-left: 10px;
+			margin-left: 10px;
 			box-shadow: none;
 			border: none;
 			box-sizing: border-box;
