--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 			overflow: hidden;
 			margin-bottom: 20px;            /* Space between cards */
 			margin-top: 10px;
+			margin-right:20px;
 		}
 		
 		.project-image {
