--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 			overflow-y: auto;               /* Enable vertical scrolling */
 			padding: 0 20px;             /* Add space for scrollbar */
 			margin: 0;            /* Align content flush with the section */
-			<!-- box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */ -->
+			box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for scrollable area */
 			padding-right: 10px;
 			margin-right: -10px;
-			box-shadow: none;
-			border: none;
+			<!-- box-shadow: none;
+			border: none; -->
 			box-sizing: border-box;
 		}
 
