--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
                 <img src="ProfileAI.png" alt="Profile Picture" class="profile-image">
                 <div class="about-text">
                     <p>
-                        Welcome to my digital space! I am a Scientific Employee at the Technical University of Munich, 
-                        specializing in Point Cloud processing, segmentation, and visualization. My work bridges academic research 
-                        with industrial and environmental applications, driving meaningful innovation.
+						Welcome to my digital space! I am a Scientific Employee at the Technical University of Munich, specializing in LiDAR technology, point cloud processing, data fusion, and machine learning. 
+						I excel in advanced segmentation and 3D visualization, combining diverse data sources to generate actionable insights for industrial and environmental innovation. 
+						With strong collaboration, leadership, and interdisciplinary teamwork skills, I bridge academic research and real-world applications, delivering cutting-edge solutions that drive meaningful innovation.
                     </p>
                     <div class="contact-links">
 						<a href="mailto:oliver.geissendoerfer@gmail.com">
@@ -401,7 +401,7 @@
 					<h3>PROVILAS</h3>
 					<img src="PROVILAS.png" alt="PROVILAS" class="project-image">
 					<p>
-						Exploring innovative ways to analyze a time series of spatial data using LiDAR technology for enhanced spatio-temporal understanding in structural health monitoring.
+						Exploring innovative approaches to analyze spatial time series data with LiDAR technology, advancing spatio-temporal insights for enhanced precision in structural health monitoring.
 					</p>
 					<a href="https://www.asg.ed.tum.de/gds/forschung-research/projects/provilas/" class="project-link">Learn More</a>
 				</div>
@@ -449,7 +449,7 @@
             {
                 year: "2024",
                 title: "Combining LiDAR and Time Domain Frequency Analysis",
-                description: "Analyzing objects concerning their periodic behavior is mostly performed with inertial measurement units (IMUs) or global navigation satellite system (GNSS) sensors fixed to its surface. For connecting observations, sensors have to be assigned to the same reference frame in space and time as a prerequisite. Using light detection and ranging (LiDAR) observations enables contactless, time-synchronized, and spatially connected data points within a single sensor. Therefore, common signal properties are further analyzed in the spectrum to find connections and similarities between observations. Since observations are spatially continuous we can discretize them and traditionally process them. However, the time domain offers a diversity of ways to simultaneously estimate frequencies and continuously model properties at different spatial locations. Within this work, we exploit the potential of processing LiDAR data in the time domain to make use of the sensor’s contactless observations and its sampling rate in space and time. Consecutive points and their spatial neighborhoods are used to implement temporal as well as spatiotemporal connections to directly model oscillations in 2-D space. Moreover, we compute an uncertainty of estimated variables to qualify our solution. Consequently, our approach offers the opportunity to describe as well as evaluate movements and vibrations of spatially connected areas.",
+                description: "This work explores the use of LiDAR technology for contactless, time-synchronized, and spatially continuous observations, enabling the analysis of periodic behaviors in objects. By processing LiDAR data in the time domain, the approach directly models oscillations in 2D space, leveraging spatiotemporal connections between consecutive points and their neighborhoods. Additionally, it incorporates uncertainty quantification to evaluate the reliability of estimated variables, offering a robust framework for describing and analyzing movements and vibrations across spatially connected areas.",
 				link: "https://ieeexplore.ieee.org/abstract/document/10648750",
                 image: "IEEE2024.png"
             },
