--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 		.profile-image {
 			width: auto;                    /* Maintain aspect ratio */
-			max-height: 300px;              /* Prevent image from growing too tall */
+			max-height: 200px;              /* Prevent image from growing too tall */
 			object-fit: cover;              /* Ensure image scales properly */
 			border-radius: 10px;            /* Optional: rounded corners */
 			float: none;					/* Remove floating on small screens */
@@ -92,7 +92,7 @@
         .contact-links {
 			margin-top: auto;				/* Push the logos to the bottom of the container */
 			display: flex;                  /* Use flexbox for layout */
-			flex-wrap: nowrap;              /* Prevent stacking */
+			<!-- flex-wrap: nowrap;              /* Prevent stacking */ -->
 			justify-content: space-between;  /* Evenly space logos across the width  commands -evenly, -between, -around*/
 			padding-top: 50px;
 			gap: 0;                         /* No extra gaps needed since space-evenly handles spacing */
