--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         .contact-links {
 			margin-top: auto;				/* Push the logos to the bottom of the container */
 			display: flex;                  /* Use flexbox for layout */
-			<!-- flex-wrap: nowrap;              /* Prevent stacking */ -->
+			flex-wrap: nowrap;              /* Prevent stacking */
 			justify-content: space-between;  /* Evenly space logos across the width  commands -evenly, -between, -around*/
 			padding-top: 50px;
 			gap: 0;                         /* No extra gaps needed since space-evenly handles spacing */
